add sa annotation variable

--- a/shoreline-agent/templates/serviceaccount.yaml
+++ b/shoreline-agent/templates/serviceaccount.yaml
@@ -1,9 +1,14 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  {{- if and (eq .Values.agent.serviceaccount.irsa true) (ne .Values.agent.serviceaccount.aws_role "") }}
+  {{- if or (and (eq .Values.agent.serviceaccount.irsa true) (ne .Values.agent.serviceaccount.aws_role "")) (.Values.agent.serviceaccount.annotations) }}
   annotations:
+    {{- if and (eq .Values.agent.serviceaccount.irsa true) (ne .Values.agent.serviceaccount.aws_role "") }}
     eks.amazonaws.com/role-arn: {{ .Values.agent.serviceaccount.aws_role }}
+    {{- end }}
+    {{- if .Values.agent.serviceaccount.annotations }}
+    {{ toYaml .Values.agent.serviceaccount.annotations | nindent 4 }}
+    {{- end }}
   {{- end }}
   name: {{ tpl .Values.global.namespace . }}-sa
   namespace: {{ tpl .Values.global.namespace . }}
