add support for public repo

--- a/shoreline-agent/templates/secret.yaml
+++ b/shoreline-agent/templates/secret.yaml
@@ -9,6 +9,7 @@ type: Opaque
 data:
   customer-secret: {{ required "customer secret is a required field" .Values.global.customer_secret | b64enc | quote }}
 ---
+{{- if ne .Values.agent.resource.image "shorelinesoftware/agent" }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -17,3 +18,4 @@ metadata:
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ template "imagePullSecret" . }}
+{{- end }}
