--- a/shoreline-agent/templates/shoreline.yaml
+++ b/shoreline-agent/templates/shoreline.yaml
@@ -140,6 +140,10 @@ spec:
       nodeSelector:
       {{ toYaml .Values.agent.resource.nodeSelector | nindent 8 }}
       {{- end }}
+      {{- if .Values.agent.resource.tolerations }}
+      tolerations:
+      {{ toYaml .Values.agent.resource.tolerations | nindent 6 }}
+      {{- end }}
       terminationGracePeriodSeconds: 30
       volumes:
         {{- if ne $varlog "disable" }}
