--- a/test/values_deployment.yaml
+++ b/test/values_deployment.yaml
@@ -5,25 +5,7 @@ global:
   customer_endpoint: "agent-gateway.shoreline-test5.io:443"
   certificate: |
     -----BEGIN CERTIFICATE-----
-    MIIDdjCCAl6gAwIBAgIUCkFDuc4WSjQcW2OA/tF2TNgJat4wDQYJKoZIhvcNAQEL
-    BQAwUzELMAkGA1UEBhMCVVMxDzANBgNVBAgTBk9yZWdvbjERMA8GA1UEBxMIUG9y
-    dGxhbmQxEzARBgNVBAoTCkt1YmVybmV0ZXMxCzAJBgNVBAsTAkNBMB4XDTIwMDEw
-    MzE4NTEwMFoXDTI1MDEwMTE4NTEwMFowUzELMAkGA1UEBhMCVVMxDzANBgNVBAgT
-    Bk9yZWdvbjERMA8GA1UEBxMIUG9ydGxhbmQxEzARBgNVBAoTCkt1YmVybmV0ZXMx
-    CzAJBgNVBAsTAkNBMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAvnEl
-    u25KMEIkmfAGsyLP9qGrQ1wbD9hiQSuODw69NJb0TcjdGiuEJ6Zy/7LaxUvfPtY9
-    yCQj/fTpEUbx+rMhYjwq6oRr+dCOP/BTy+0g/ieVrRm73A2GMaK14kDT6QGDXCB0
-    W2DaUeQClNyPZNu33lA99vCjM3Nmh576hqCJd7LkwUV55S3TzQxMVv0gYgoh99yd
-    OEtLfcVTXk1ixXRLYVHYQi52bFeNYCNauC1aBMa56dPM3lMcNcX9foF2rT0bVTqE
-    zvQI7yZda6nT4IUuCD04ARgK+KyHA04vPpEWztBFSCkTytN0T4s3+eAgmf7DuZBU
-    koR6aCDTuhqqSai5BQIDAQABo0IwQDAOBgNVHQ8BAf8EBAMCAQYwDwYDVR0TAQH/
-    BAUwAwEB/zAdBgNVHQ4EFgQUrnJXFY+qSzmuhEde7HLEyKVD2pQwDQYJKoZIhvcN
-    AQELBQADggEBALDlpAlw/U9qdkb8vKKPlR1TmiJME/5L8hsi8ZlcBhmFEMyXiB/Y
-    VMBPpQUe8WrKff1xQMgyF1UKjJoVtNFpbx7m9UEEZ2Ji2IQTwnesQXDUXF/VlwBd
-    bmiZ8uRafPxOJiTN/iefaNcs7NE/rejqn8ADKXWN9oXlnu//ohwKIhIhbPFbHsHj
-    ROobsORt4LCjDUxUvuk4csyUckxnGkkGJw6UwvL3NKWEbIh1SpXuW7WixX3O1ZGz
-    +1b7K3Vy/0qNDtlaCpEsDDOciDuZnGrSrn3u18tNm78w1n+htBoFCLu49LlgJAex
-    cMVZTmnI/FgI+MGROXr0iinlcwQa7OkHLPQ=
+    TEST CERTIFICATE
     -----END CERTIFICATE-----
 agent:
   serviceaccount:
