--- a/shoreline-agent/templates/clusterrole.yaml
+++ b/shoreline-agent/templates/clusterrole.yaml
@@ -42,6 +42,9 @@ rules:
   - apps
   resources:
   - daemonsets
+  {{- if eq .Values.agent.resource.kind "Statefulset" }}
+  - statefulsets
+  {{- end }}
   resourceNames:
   - shoreline
   verbs:
