--- a/shoreline-agent/templates/scraperconfigmap.yaml
+++ b/shoreline-agent/templates/scraperconfigmap.yaml
@@ -1,6 +1,10 @@
 apiVersion: v1
 data:
   scraper.yml: |
+  {{- if eq .Values.agent.resource.kind "Statefulset" }}
+    resource_discovery_config:
+      discover_scope: cluster
+  {{- end }}
   {{- if .Values.scraperConfig.enable }}
     scrape_configs:
     - job_name: 'node-exporter'
