--- a/shoreline-agent/templates/shoreline.yaml
+++ b/shoreline-agent/templates/shoreline.yaml
@@ -9,6 +9,10 @@ spec:
   {{- if eq .Values.agent.resource.kind "Deployment" }}
   replicas: {{ .Values.agent.resource.replicas }}
   {{- end }}
+  {{- if eq .Values.agent.resource.kind "Statefulset" }}
+  replicas: {{ .Values.agent.resource.replicas }}
+  serviceName: {{ .Values.global.name }}
+  {{- end }}
   selector:
     matchLabels:
       app: {{ .Values.global.name }}
@@ -21,12 +25,32 @@ spec:
       {{ toYaml .Values.agent.resource.podAnnotations | nindent 8 }}
       {{- end }}
     spec:
+    {{- if eq .Values.agent.resource.kind "Statefulset" }}
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+                - key: "app"
+                  operator: In
+                  values:
+                  - {{ .Values.global.name }}
+            topologyKey: "kubernetes.io/hostname"
+    {{- end }}
       containers:
         - env:
             - name: POD_IP
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIP
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
             - name: BACKEND_ADDRESS
               value: {{ .Values.global.customer_endpoint }}
             - name: NODE_NAME
