--- a/shoreline-agent/values.yaml
+++ b/shoreline-agent/values.yaml
@@ -17,8 +17,9 @@ agent:
   resource:
     kind: "DaemonSet"
     replicas: 1
+    hpa: "disable"
     image: "shorelinesoftware/agent"
-    tag: "release-13.1.5"
+    tag: "release-13.1.22"
     resources:
       limits:
         cpu: "500m"
