--- a/shoreline-agent/templates/shoreline.yaml
+++ b/shoreline-agent/templates/shoreline.yaml
@@ -118,7 +118,10 @@ spec:
           lifecycle:
             postStart:
               exec:
-                command: ["/bin/sh", "-c", "kubectl get configmap ca-pemstore -n {{ tpl .Values.global.namespace . }} -o yaml | sed -n '/.BEGIN CERTIFICATE./,${p;/.END CERTIFICATE./q}' | sed 's/^ *//g' > /usr/local/share/ca-certificates/ca-local.crt && update-ca-certificates;"]
+                command:
+                - /bin/sh
+                - -c
+                - cp /agent/secrets/ca_cert.crt /usr/local/share/ca-certificates/ca-local.crt && update-ca-certificates;
           {{- end }}
           ports:
             - containerPort: 5051
