--- a/shoreline-agent/templates/secret.yaml
+++ b/shoreline-agent/templates/secret.yaml
@@ -9,7 +9,7 @@ type: Opaque
 data:
   customer-secret: {{ required "customer secret is a required field" .Values.global.customer_secret | b64enc | quote }}
 ---
-{{- if ne .Values.agent.resource.image "shorelinesoftware/agent" }}
+{{- if .Values.agent.resource.imageCredentials }}
 apiVersion: v1
 kind: Secret
 metadata:
