--- a/shoreline-agent/values.yaml
+++ b/shoreline-agent/values.yaml
@@ -19,6 +19,10 @@ agent:
     replicas: 1
     image: "shorelinesoftware/agent"
     tag: "release-x.x.x"
+    # imageCredentials:
+    #   server: "https://docker.io"
+    #   username: "un"
+    #   password: "pw"
     resources:
       limits:
         cpu: "500m"
