--- a/shoreline-agent/values.yaml
+++ b/shoreline-agent/values.yaml
@@ -26,6 +26,7 @@ agent:
     #   server: "https://docker.io"
     #   username: "un"
     #   password: "pw"
+    hostAction: "enable"
     resources:
       limits:
         cpu: "500m"
