--- a/shoreline-agent/templates/hostaction.yaml
+++ b/shoreline-agent/templates/hostaction.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: entrypoint
-  namespace: shoreline
+  namespace: {{ tpl .Values.global.namespace . }}
   labels:
     app: default-init
 data:
