--- a/shoreline-agent/values.yaml
+++ b/shoreline-agent/values.yaml
@@ -9,6 +9,7 @@ global:
   # certificate: |
   #   -----BEGIN CERTIFICATE-----
   #   -----END CERTIFICATE-----
+  certificateVolumeType: "secret"
 agent:
   serviceaccount:
     irsa: false
@@ -26,6 +27,7 @@ agent:
     #   server: "https://docker.io"
     #   username: "un"
     #   password: "pw"
+    # imageCredentialK8sSecret: "pre-existing-k8s-secret"
     hostAction: "enable"
     resources:
       limits:
