--- a/test/values_daemonset.yaml
+++ b/test/values_daemonset.yaml
@@ -8,12 +8,21 @@ global:
     TEST CERTIFICATE
     -----END CERTIFICATE-----
 agent:
+  podLabels:
+    azure.workload.identity/use: "true"
   serviceaccount:
     annotations:
       iam-blab-bla: something
+      oci.oraclecloud.com/policy: something
+      azure.workload.identity/use: "true"
   resource:
     image: "shorelinesoftware/agent"
     tag: "release-3.5.32"
+    # imageCredentials:
+    #   server: "https://docker.io"
+    #   username: "un"
+    #   password: "pw"
+    # imageCredentialK8sSecret: "pre-existing-k8s-secret"
     nodeSelector:
       eks.amazonaws.com/nodegroup: ng-1
     tolerations:
@@ -29,6 +38,8 @@ agent:
     environmentVariables:
       - name: TEST_ENV_VAR
         value: "test_env_var"
+    volumeMounts:
+      caPemstoreReadOnly: true
 scraperConfig:
   enable: true
   exporters:
