--- a/shoreline-agent/values.yaml
+++ b/shoreline-agent/values.yaml
@@ -15,9 +15,12 @@ agent:
     irsa: false
     aws_role: ""
     runAsNonRoot: false
-  # podLabels:
-  #   name1: value1
-  #   name2: value2
+    annotations:
+      iam-blab-bla: something
+      oci.oraclecloud.com/policy: something
+      azure.workload.identity/use: "true"
+  podLabels:
+    azure.workload.identity/use: "true"
   resource:
     kind: "DaemonSet"
     replicas: 1
