--- a/shoreline-agent/templates/secret.yaml
+++ b/shoreline-agent/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.customer_secret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,7 +8,8 @@ metadata:
     app : {{ .Values.global.name }}
 type: Opaque
 data:
-  customer-secret: {{ required "customer secret is a required field" .Values.global.customer_secret | b64enc | quote }}
+  customer-secret: {{ .Values.global.customer_secret | b64enc | quote }}
+{{- end }}
 ---
 {{- if .Values.agent.resource.imageCredentials }}
 apiVersion: v1
